--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<modules>
 		<module>daml-on-x-example</module>
 		<module>daml-on-sawtooth-protobufs</module>
+		<module>noop-transaction-processor</module>
 	</modules>
 
 	<properties>
@@ -21,7 +22,7 @@
 		<protobuf.version>3.6.1</protobuf.version>
 		<checkstyle.path>../checkstyle.xml</checkstyle.path>
 		<maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
-		<sawtooth-sdk.version>v0.1.2</sawtooth-sdk.version>
+		<sawtooth.sdk.version>v0.1.2</sawtooth.sdk.version>
 		<daml.sdk.version>100.11.19</daml.sdk.version>
 		<daml.bindings.version>2.3.3</daml.bindings.version>
 		<scala.lang.version>2.12</scala.lang.version>
@@ -31,21 +32,35 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- Unit testing -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>2.26.0</version>
+				<scope>test</scope>
+			</dependency>
+
 			<!-- Hyperledger Sawtooth Dependencies -->
 			<dependency>
 				<groupId>org.hyperledger.sawtooth</groupId>
 				<artifactId>sawtooth-sdk-signing</artifactId>
-				<version>${project.sawtooth-sdk.version}</version>
+				<version>${sawtooth.sdk.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hyperledger.sawtooth</groupId>
 				<artifactId>sawtooth-sdk-protos</artifactId>
-				<version>${project.sawtooth-sdk.version}</version>
+				<version>${sawtooth.sdk.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hyperledger.sawtooth</groupId>
 				<artifactId>sawtooth-sdk-transaction-processor</artifactId>
-				<version>${project.sawtooth-sdk.version}</version>
+				<version>${sawtooth.sdk.version}</version>
 			</dependency>
 
 			<!-- DAML Dependencies -->
@@ -157,14 +172,14 @@
 				<version>${daml.sdk.version}</version>
 				<scope>test</scope>
 			</dependency>
-			
+
 			<!-- Scala -->
 			<dependency>
 				<groupId>org.scala-lang</groupId>
 				<artifactId>scala-library</artifactId>
 				<version>2.12.8</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>com.google.protobuf</groupId>
 				<artifactId>protobuf-java</artifactId>
@@ -182,21 +197,49 @@
 				<version>1.7.25</version>
 			</dependency>
 
+			<!-- Apache Commons -->
+			<dependency>
+				<groupId>commons-cli</groupId>
+				<artifactId>commons-cli</artifactId>
+				<version>1.4</version>
+			</dependency>
+
+
 		</dependencies>
 	</dependencyManagement>
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>kr.motd.maven</groupId>
+				<artifactId>os-maven-plugin</artifactId>
+				<version>1.6.2</version>
+			</extension>
+		</extensions>
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>net.alchim31.maven</groupId>
 					<artifactId>scala-maven-plugin</artifactId>
 					<version>4.0.1</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+								<goal>testCompile</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<scalaVersion>2.12.8</scalaVersion>
+						<source>${java.source.version}</source>
+						<target>${java.target.version}</target>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
-					<version>2.17</version>
+					<version>3.0.0</version>
 					<executions>
 						<execution>
 							<id>validate</id>
@@ -210,7 +253,10 @@
 								<consoleOutput>true</consoleOutput>
 								<failOnViolation>true</failOnViolation>
 								<violationSeverity>warning</violationSeverity>
-								<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
+								<sourceDirectories>
+									<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
+									<sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
+								</sourceDirectories>
 							</configuration>
 						</execution>
 					</executions>
@@ -273,12 +319,6 @@
 					</executions>
 				</plugin>
 				<plugin>
-					<artifactId>maven-jar-plugin</artifactId>
-					<configuration>
-						<classifier>jdk8</classifier>
-					</configuration>
-				</plugin>
-				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${maven.compiler.plugin.version}</version>
@@ -291,6 +331,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+
 	</build>
 	<repositories>
 		<repository>
@@ -298,7 +339,5 @@
 			<url>https://digitalassetsdk.bintray.com/DigitalAssetSDK</url>
 		</repository>
 	</repositories>
-	<pluginRepositories></pluginRepositories>
-
 
 </project>
