Set up slf4j and logging for test
Add some logging into the handler

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/noop-transaction-processor/pom.xml
+++ b/noop-transaction-processor/pom.xml
@@ -20,9 +20,14 @@
 	</build>
 
 	<dependencies>
+		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
 
 		<!-- Unit testing -->
