--- a/pom.xml
+++ b/pom.xml
@@ -191,12 +191,18 @@
 				<version>${protobuf.version}</version>
 			</dependency>
 
+			<!-- Logging -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.7.25</version>
+				<version>1.8.0-beta4</version>
 			</dependency>
-
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>1.8.0-beta4</version>
+			</dependency>
+			
 			<!-- Apache Commons -->
 			<dependency>
 				<groupId>commons-cli</groupId>
