Set up sawtooth-daml-tp and sawtooth-daml-rpc
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 		<module>daml-on-x-example</module>
 		<module>daml-on-sawtooth-protobufs</module>
 		<module>noop-transaction-processor</module>
+		<module>sawtooth-daml-tp</module>
+		<module>sawtooth-daml-rpc</module>
 	</modules>
 
 	<properties>
