--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -34,6 +34,103 @@
 			<artifactId>mockito-core</artifactId>
 		</dependency>
 
+		<!-- DAML -->
+		<dependency>
+			<groupId>com.daml.ledger</groupId>
+			<artifactId>bindings-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.daml.scala</groupId>
+			<artifactId>akka-stream-client_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset</groupId>
+			<artifactId>daml-lf-value-java-proto</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset</groupId>
+			<artifactId>daml-lf-engine_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset</groupId>
+			<artifactId>daml-lf-data_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset</groupId>
+			<artifactId>daml-lf-interpreter_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset</groupId>
+			<artifactId>daml-lf-package_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset</groupId>
+			<artifactId>daml-lf-transaction_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset</groupId>
+			<artifactId>daml-lf-validation_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset</groupId>
+			<artifactId>daml-lf-archive-scala_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger-bindings</groupId>
+			<artifactId>bindings-scala_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger-bindings</groupId>
+			<artifactId>bindings-scala-logging_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger-bindings</groupId>
+			<artifactId>bindings-akka_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger</groupId>
+			<artifactId>ledger-backend-api_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger</groupId>
+			<artifactId>ledger-api-client_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger</groupId>
+			<artifactId>ledger-api-common_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger</groupId>
+			<artifactId>ledger-api-domain_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger-api</groupId>
+			<artifactId>rs-grpc-bridge</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger-api</groupId>
+			<artifactId>rs-grpc-akka_${scala.lang.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.platform</groupId>
+			<artifactId>sandbox</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.digitalasset.ledger</groupId>
+			<artifactId>semantic-test-runner</artifactId>
+			<scope>test</scope>
+		</dependency>		
+		<dependency>
+			<groupId>com.thesamet.scalapb</groupId>
+			<artifactId>scalapb-runtime_${scala.lang.version}</artifactId>
+			<version>0.8.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thesamet.scalapb</groupId>
+			<artifactId>scalapb-runtime-grpc_${scala.lang.version}</artifactId>
+			<version>0.8.4</version>
+		</dependency>
+		
 		<!-- Hyperledger Sawtooth -->
 		<dependency>
 			<groupId>org.hyperledger.sawtooth</groupId>
