Implemented DAML Transaction handler (#9)
* Implemented DAML Transaction handler

This include unit tests

* Make constructor no-args

Member variables set with constant values

* Implemented apply

This is still failing pushing to get help from Kevin

* De-conflict scala and mockito dependencies

Scala stops mockito from generating classes stopping mockito from
functioning properly.

* Add failing DAML txn handler to apply

1. Test to verify handler is able to catch apply internal exception
when there is no payload.

2. Test to verify handler is able to catch apply transaction exception
when there is no request header.

3. Verify handler will throw transaction exception when payload size is
zero.

* Add DAMLLedger state interface

1. Created new Ledger state wrapper
2. Add failing tests
3. Fixed the POM

* Add Namespace.java, flesh out more testing of DAMLLedgerState,
removed some premature implementation

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

* Remove Utility.java, refactor getNameSpaces etc

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

* Adjust TransactionHandler test to use better mockState

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

* Beginning a bit of implementation

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/daml-on-sawtooth-protobufs/pom.xml
+++ b/daml-on-sawtooth-protobufs/pom.xml
@@ -20,6 +20,7 @@
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -32,6 +33,25 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>target/generated-sources/protobuf/java</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 
