--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
-				<version>2.26.0</version>
+				<version>2.27.0</version>
 				<scope>test</scope>
 			</dependency>
 
@@ -204,14 +204,18 @@
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>1.8.0-beta4</version>
 			</dependency>
-			
-			<!-- Apache Commons -->
+
+			<!-- Apache Commons and Useful things -->
 			<dependency>
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
 				<version>1.4</version>
 			</dependency>
-
+			<dependency>
+				<groupId>org.javatuples</groupId>
+				<artifactId>javatuples</artifactId>
+				<version>1.2</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
