--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -1,15 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>daml-on-sawtooth</groupId>
-    <artifactId>daml-on-sawtooth</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>sawtooth-daml-tp</artifactId>
-  <name>sawtooth-daml-tp</name>
-  <description>Transaction Processor for DAML</description>
-  
-  	<build>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>daml-on-sawtooth</groupId>
+		<artifactId>daml-on-sawtooth</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>sawtooth-daml-tp</artifactId>
+	<name>sawtooth-daml-tp</name>
+	<description>Transaction Processor for DAML</description>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -35,14 +37,10 @@
 		</dependency>
 
 		<!-- DAML -->
-		<dependency>
-			<groupId>com.daml.ledger</groupId>
-			<artifactId>bindings-java</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.daml.scala</groupId>
-			<artifactId>akka-stream-client_${scala.lang.version}</artifactId>
-		</dependency>
+		<!-- This is interfering with Mockito -->
+		<!-- <dependency> <groupId>com.daml.ledger</groupId> <artifactId>bindings-java</artifactId> 
+			</dependency> <dependency> <groupId>com.daml.scala</groupId> <artifactId>akka-stream-client_${scala.lang.version}</artifactId> 
+			</dependency> -->
 		<dependency>
 			<groupId>com.digitalasset</groupId>
 			<artifactId>daml-lf-value-java-proto</artifactId>
@@ -119,7 +117,7 @@
 			<groupId>com.digitalasset.ledger</groupId>
 			<artifactId>semantic-test-runner</artifactId>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>com.thesamet.scalapb</groupId>
 			<artifactId>scalapb-runtime_${scala.lang.version}</artifactId>
@@ -130,7 +128,7 @@
 			<artifactId>scalapb-runtime-grpc_${scala.lang.version}</artifactId>
 			<version>0.8.4</version>
 		</dependency>
-		
+
 		<!-- Hyperledger Sawtooth -->
 		<dependency>
 			<groupId>org.hyperledger.sawtooth</groupId>
@@ -150,6 +148,18 @@
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<scope>test</scope>
+		</dependency>
 
+
+		<!-- BTP -->
+		<dependency>
+			<groupId>daml-on-sawtooth</groupId>
+			<artifactId>daml-on-sawtooth-protobufs</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
 	</dependencies>
 </project>
