--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -1,153 +1,157 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>daml-on-sawtooth</groupId>
-		<artifactId>daml-on-sawtooth</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
-	<artifactId>sawtooth-daml-rpc</artifactId>
-	<name>sawtooth-daml-rpc</name>
-	<description>RPC server for sawtooth-daml</description>
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+ <modelVersion>4.0.0</modelVersion>
+ <parent>
+  <groupId>daml-on-sawtooth</groupId>
+  <artifactId>daml-on-sawtooth</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+ </parent>
+ <artifactId>sawtooth-daml-rpc</artifactId>
+ <name>sawtooth-daml-rpc</name>
+ <description>RPC server for sawtooth-daml</description>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+ <build>
+  <plugins>
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+   </plugin>
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-checkstyle-plugin</artifactId>
+   </plugin>
+  </plugins>
+ </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
+ <dependencies>
+  <dependency>
+   <groupId>org.slf4j</groupId>
+   <artifactId>slf4j-api</artifactId>
+  </dependency>
 
-		<!-- Unit testing -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-		</dependency>
+  <!-- Unit testing -->
+  <dependency>
+   <groupId>junit</groupId>
+   <artifactId>junit</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>org.mockito</groupId>
+   <artifactId>mockito-core</artifactId>
+  </dependency>
 
-		<!-- DAML -->
-		<dependency>
-			<groupId>com.daml.ledger</groupId>
-			<artifactId>bindings-java</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.daml.scala</groupId>
-			<artifactId>akka-stream-client_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset</groupId>
-			<artifactId>daml-lf-value-java-proto</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset</groupId>
-			<artifactId>daml-lf-engine_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset</groupId>
-			<artifactId>daml-lf-data_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset</groupId>
-			<artifactId>daml-lf-interpreter_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset</groupId>
-			<artifactId>daml-lf-package_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset</groupId>
-			<artifactId>daml-lf-transaction_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset</groupId>
-			<artifactId>daml-lf-validation_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset</groupId>
-			<artifactId>daml-lf-archive-scala_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger-bindings</groupId>
-			<artifactId>bindings-scala_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger-bindings</groupId>
-			<artifactId>bindings-scala-logging_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger-bindings</groupId>
-			<artifactId>bindings-akka_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger</groupId>
-			<artifactId>ledger-backend-api_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger</groupId>
-			<artifactId>ledger-api-client_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger</groupId>
-			<artifactId>ledger-api-common_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger</groupId>
-			<artifactId>ledger-api-domain_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger-api</groupId>
-			<artifactId>rs-grpc-bridge</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger-api</groupId>
-			<artifactId>rs-grpc-akka_${scala.lang.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.platform</groupId>
-			<artifactId>sandbox</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.digitalasset.ledger</groupId>
-			<artifactId>semantic-test-runner</artifactId>
-			<scope>test</scope>
-		</dependency>		
-		<dependency>
-			<groupId>com.thesamet.scalapb</groupId>
-			<artifactId>scalapb-runtime_${scala.lang.version}</artifactId>
-			<version>0.8.4</version>
-		</dependency>
-		<dependency>
-			<groupId>com.thesamet.scalapb</groupId>
-			<artifactId>scalapb-runtime-grpc_${scala.lang.version}</artifactId>
-			<version>0.8.4</version>
-		</dependency>
+  <!-- DAML -->
+  <dependency>
+   <groupId>com.daml.ledger</groupId>
+   <artifactId>bindings-java</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.daml.scala</groupId>
+   <artifactId>akka-stream-client_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset</groupId>
+   <artifactId>daml-lf-value-java-proto</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset</groupId>
+   <artifactId>daml-lf-engine_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset</groupId>
+   <artifactId>daml-lf-data_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset</groupId>
+   <artifactId>daml-lf-interpreter_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset</groupId>
+   <artifactId>daml-lf-package_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset</groupId>
+   <artifactId>daml-lf-transaction_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset</groupId>
+   <artifactId>daml-lf-validation_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset</groupId>
+   <artifactId>daml-lf-archive-scala_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger-bindings</groupId>
+   <artifactId>bindings-scala_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger-bindings</groupId>
+   <artifactId>bindings-scala-logging_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger-bindings</groupId>
+   <artifactId>bindings-akka_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger</groupId>
+   <artifactId>ledger-backend-api_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger</groupId>
+   <artifactId>ledger-api-client_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger</groupId>
+   <artifactId>ledger-api-common_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger</groupId>
+   <artifactId>ledger-api-domain_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger-api</groupId>
+   <artifactId>rs-grpc-bridge</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger-api</groupId>
+   <artifactId>rs-grpc-akka_${scala.lang.version}</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.platform</groupId>
+   <artifactId>sandbox</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>com.digitalasset.ledger</groupId>
+   <artifactId>semantic-test-runner</artifactId>
+   <scope>test</scope>
+  </dependency>
+  <dependency>
+   <groupId>com.thesamet.scalapb</groupId>
+   <artifactId>scalapb-runtime_${scala.lang.version}</artifactId>
+   <version>0.8.4</version>
+  </dependency>
+  <dependency>
+   <groupId>com.thesamet.scalapb</groupId>
+   <artifactId>scalapb-runtime-grpc_${scala.lang.version}</artifactId>
+   <version>0.8.4</version>
+  </dependency>
 
-		<!-- Hyperledger Sawtooth -->
-		<dependency>
-			<groupId>org.hyperledger.sawtooth</groupId>
-			<artifactId>sawtooth-sdk-signing</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hyperledger.sawtooth</groupId>
-			<artifactId>sawtooth-sdk-protos</artifactId>
-		</dependency>
+  <!-- Hyperledger Sawtooth -->
+  <dependency>
+   <groupId>org.hyperledger.sawtooth</groupId>
+   <artifactId>sawtooth-sdk-signing</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>org.hyperledger.sawtooth</groupId>
+   <artifactId>sawtooth-sdk-protos</artifactId>
+  </dependency>
 
-		<!-- Apache Commons -->
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-		</dependency>
+  <!-- Apache Commons -->
+  <dependency>
+   <groupId>commons-cli</groupId>
+   <artifactId>commons-cli</artifactId>
+  </dependency>
 
-	</dependencies>
+ </dependencies>
 </project>
