--- a/pom.xml
+++ b/pom.xml
@@ -66,130 +66,14 @@
    </dependency>
 
    <!-- DAML Dependencies -->
-   <dependency>
-    <groupId>com.daml.ledger</groupId>
-    <artifactId>bindings-java</artifactId>
-    <version>${daml.bindings.version}</version>
-   </dependency>
 
-   <dependency>
-    <groupId>com.daml.scala</groupId>
-    <artifactId>akka-stream-client_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset</groupId>
-    <artifactId>daml-lf-value-java-proto</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset</groupId>
-    <artifactId>daml-lf-engine_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset</groupId>
-    <artifactId>daml-lf-data_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset</groupId>
-    <artifactId>daml-lf-interpreter_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset</groupId>
-    <artifactId>daml-lf-package_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset</groupId>
-    <artifactId>daml-lf-transaction_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset</groupId>
-    <artifactId>daml-lf-validation_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset</groupId>
-    <artifactId>daml-lf-archive-scala_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger-bindings</groupId>
-    <artifactId>bindings-scala_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger-bindings</groupId>
-    <artifactId>bindings-scala-logging_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger-bindings</groupId>
-    <artifactId>bindings-akka_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger</groupId>
-    <artifactId>ledger-backend-api_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger</groupId>
-    <artifactId>ledger-api-client_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger</groupId>
-    <artifactId>ledger-api-common_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger</groupId>
-    <artifactId>ledger-api-domain_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
 
-   <dependency>
-    <groupId>com.digitalasset.ledger-api</groupId>
-    <artifactId>rs-grpc-bridge</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger-api</groupId>
-    <artifactId>rs-grpc-akka_${scala.lang.version}</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.platform</groupId>
-    <artifactId>sandbox</artifactId>
-    <version>${daml.sdk.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.digitalasset.ledger</groupId>
-    <artifactId>semantic-test-runner</artifactId>
-    <version>${daml.sdk.version}</version>
-    <scope>test</scope>
-   </dependency>
 
    <!-- Scala -->
-   <dependency>
-    <groupId>org.scala-lang</groupId>
-    <artifactId>scala-library</artifactId>
-    <version>2.12.8</version>
-   </dependency>
 
    <dependency>
     <groupId>com.google.protobuf</groupId>
     <artifactId>protobuf-java</artifactId>
-    <version>${protobuf.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>com.google.protobuf</groupId>
-    <artifactId>protobuf-java-util</artifactId>
     <version>${protobuf.version}</version>
    </dependency>
 
@@ -217,6 +101,13 @@
     <version>1.2</version>
    </dependency>
 
+   <dependency>
+    <groupId>com.daml.ledger</groupId>
+    <artifactId>
+     participant-state-kvutils_${scala.lang.version}
+    </artifactId>
+    <version>100.12.13</version>
+   </dependency>
   </dependencies>
  </dependencyManagement>
 
