Add sawtooth-daml-common, fix dependencies
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
 
 
  <modules>
-  <!-- <module>daml-on-x-example</module> -->
   <module>daml-on-sawtooth-protobufs</module>
   <module>noop-transaction-processor</module>
   <module>sawtooth-daml-tp</module>
   <module>sawtooth-daml-rpc</module>
+  <module>sawtooth-daml-common</module>
  </modules>
 
  <properties>
