--- a/sawtooth-daml-common/pom.xml
+++ b/sawtooth-daml-common/pom.xml
@@ -7,9 +7,9 @@
   <artifactId>daml-on-sawtooth</artifactId>
   <version>0.0.1-SNAPSHOT</version>
  </parent>
- <artifactId>sawtooth-daml-rpc</artifactId>
- <name>sawtooth-daml-rpc</name>
- <description>RPC server for sawtooth-daml</description>
+ <artifactId>sawtooth-daml-common</artifactId>
+ <name>sawtooth-daml-common</name>
+ <description>Common libraries and utilities for DAML on Sawtooth</description>
 
  <build>
   <plugins>
@@ -40,32 +40,10 @@
    <artifactId>mockito-core</artifactId>
   </dependency>
 
-  <!-- DAML -->
-  <dependency>
-   <groupId>com.daml.ledger</groupId>
-   <artifactId>participant-state-kvutils_${scala.lang.version}</artifactId>
-  </dependency>
-
-  <!-- Hyperledger Sawtooth -->
-  <dependency>
-   <groupId>org.hyperledger.sawtooth</groupId>
-   <artifactId>sawtooth-sdk-signing</artifactId>
-  </dependency>
-  <dependency>
-   <groupId>org.hyperledger.sawtooth</groupId>
-   <artifactId>sawtooth-sdk-protos</artifactId>
-  </dependency>
-
-  <!-- Apache Commons -->
-  <dependency>
-   <groupId>commons-cli</groupId>
-   <artifactId>commons-cli</artifactId>
-  </dependency>
-
   <!-- BTP -->
   <dependency>
    <groupId>daml-on-sawtooth</groupId>
-   <artifactId>sawtooth-daml-common</artifactId>
+   <artifactId>daml-on-sawtooth-protobufs</artifactId>
    <version>${project.parent.version}</version>
   </dependency>
 
