--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -29,7 +29,12 @@
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
   </dependency>
-
+  <dependency>
+   <groupId>io.reactivex.rxjava2</groupId>
+   <artifactId>rxjava</artifactId>
+   <version>2.2.8</version>
+  </dependency>
+  
   <!-- Unit testing -->
   <dependency>
    <groupId>junit</groupId>
