Move KeyManager and SawtoothClientUtils to common
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/sawtooth-daml-common/pom.xml
+++ b/sawtooth-daml-common/pom.xml
@@ -58,6 +58,11 @@
    <groupId>org.hyperledger.sawtooth</groupId>
    <artifactId>sawtooth-sdk-transaction-processor</artifactId>
   </dependency>
+  <dependency>
+   <groupId>org.hyperledger.sawtooth</groupId>
+   <artifactId>sawtooth-sdk-signing</artifactId>
+  </dependency>
+
 
  </dependencies>
 </project>
