--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,24 @@
     <artifactId>
      participant-state-kvutils_${scala.lang.version}
     </artifactId>
-    <version>100.12.13</version>
+    <version>${daml.sdk.version}</version>
    </dependency>
+   <dependency>
+    <groupId>com.daml.ledger</groupId>
+    <artifactId>participant-state-index_${scala.lang.version}</artifactId>
+    <version>${daml.sdk.version}</version>
+   </dependency>
+   <dependency>
+    <groupId>com.daml.ledger</groupId>
+    <artifactId>reference-participant-state-index_${scala.lang.version}</artifactId>
+    <version>${daml.sdk.version}</version>
+   </dependency>
+   <dependency>
+    <groupId>com.daml.ledger</groupId>
+    <artifactId>api-server-damlonx_${scala.lang.version}</artifactId>
+    <version>${daml.sdk.version}</version>
+   </dependency>
+
   </dependencies>
  </dependencyManagement>
 
