--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -21,6 +21,27 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-checkstyle-plugin</artifactId>
    </plugin>
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-shade-plugin</artifactId>
+    <executions>
+     <execution>
+      <goals>
+       <goal>shade</goal>
+      </goals>
+      <configuration>
+       <shadedArtifactAttached>trye</shadedArtifactAttached>
+       <transformers>
+        <transformer
+         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+         <mainClass>com.blockchaintp.sawtooth.daml.processor.DamlTransactionProcessorMain</mainClass>
+        </transformer>
+       </transformers>
+      </configuration>
+     </execution>
+    </executions>
+   </plugin>
+   
   </plugins>
  </build>
 
@@ -41,17 +62,9 @@
   </dependency>
 
   <!-- DAML -->
-  <dependency>
-   <groupId>com.daml.ledger</groupId>
-   <artifactId>participant-state-kvutils_${scala.lang.version}</artifactId>
-  </dependency>
 
 
   <!-- Hyperledger Sawtooth -->
-  <dependency>
-   <groupId>org.hyperledger.sawtooth</groupId>
-   <artifactId>sawtooth-sdk-transaction-processor</artifactId>
-  </dependency>
 
   <!-- Apache Commons -->
   <dependency>
