--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -30,7 +30,7 @@
        <goal>shade</goal>
       </goals>
       <configuration>
-       <shadedArtifactAttached>trye</shadedArtifactAttached>
+       <shadedArtifactAttached>true</shadedArtifactAttached>
        <transformers>
         <transformer
          implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
