Fix settings.xml usage, do mvn clean
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/docker/docker-compose-build.yaml
+++ b/docker/docker-compose-build.yaml
@@ -24,3 +24,5 @@ services:
     container_name: daml-on-sawtooth-build-local
     volumes:
       - ../:/project/daml-on-sawtooth
+      - ${HOME}/.m2/settings.xml:/root/.m2/settings.xml
+      
