--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <modules>
     <module>daml-on-sawtooth-protobufs</module>
     <module>noop-transaction-processor</module>
+    <module>timekeeper</module>
     <module>sawtooth-daml-tp</module>
     <module>sawtooth-daml-rpc</module>
     <module>sawtooth-daml-common</module>
