--- a/docker/compose/daml-local.yaml
+++ b/docker/compose/daml-local.yaml
@@ -18,34 +18,45 @@ version: "2.1"
 services:
 
   settings-tp:
-    image: hyperledger/sawtooth-settings-tp:latest
+    image: hyperledger/sawtooth-settings-tp:1.1
     container_name: sawtooth-settings-tp-default
     depends_on:
       - validator
-    entrypoint: settings-tp -vv --connect tcp://validator:4004
+    entrypoint: settings-tp -v --connect tcp://validator:4004
 
   validator:
-    image: hyperledger/sawtooth-validator:latest
+    image: hyperledger/sawtooth-validator:1.1
     container_name: sawtooth-validator-default
     expose:
       - 4004
       - 8800
+      - 5050
     ports:
       - "4004:4004"
       - "8800:8800"
+      - "5050:5050"
     entrypoint: "bash -c \"\
         sawadm keygen && \
         sawtooth keygen && \
         sawset genesis && \
         sawadm genesis config-genesis.batch && \
-        sawtooth-validator -vv \
+        sawtooth-validator -v \
           --endpoint tcp://validator:8800 \
           --bind component:tcp://eth0:4004 \
+          --bind consensus:tcp://eth0:5050 \
           --bind network:tcp://eth0:8800 \
         \""
 
+
+  devmode-engine:
+    image: hyperledger/sawtooth-devmode-engine-rust:1.1
+    container_name: sawtooth-devmode-engine-rust-default
+    depends_on:
+      - validator
+    entrypoint: devmode-engine-rust -C tcp://validator:5050
+
   rest-api:
-    image: hyperledger/sawtooth-rest-api:latest
+    image: hyperledger/sawtooth-rest-api:1.1
     container_name: sawtooth-rest-api-default
     expose:
       - 8008
@@ -53,4 +64,25 @@ services:
       - "8008:8008"
     depends_on:
       - validator
-    entrypoint: sawtooth-rest-api --connect tcp://validator:4004 --bind rest-api:8008
+    entrypoint: sawtooth-rest-api  --connect tcp://validator:4004 --bind rest-api:8008
+
+  daml-tp:
+    image: sawtooth-daml-tp:${ISOLATION_ID}
+    container_name: sawtooth-daml-tp
+    command: "java -jar sawtooth-daml-tp-0.0.1-SNAPSHOT-shaded.jar tcp://validator:4004"
+    depends_on:
+      - validator
+
+  daml-rpc:
+    image: sawtooth-daml-rpc:${ISOLATION_ID}
+    container_name: sawtooth-daml-rpc
+    command: "java -jar sawtooth-daml-rpc-0.0.1-SNAPSHOT-shaded.jar tcp://validator:4004 /dev/null"
+    depends_on:
+      - validator
+
+  timekeeper:
+    image: timekeeper:${ISOLATION_ID}
+    container_name: timekeeper
+    command: "java -jar timekeeper-0.0.1-SNAPSHOT-shaded.jar tcp://validator:4004"
+    depends_on:
+      - validator
