--- a/pom.xml
+++ b/pom.xml
@@ -113,10 +113,14 @@
         <version>${sawtooth.sdk.version}</version>
       </dependency>
       <!-- DAML Dependencies -->
-      <!-- Scala -->
       <dependency>
         <groupId>com.google.protobuf</groupId>
         <artifactId>protobuf-java</artifactId>
+        <version>${protobuf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-java-util</artifactId>
         <version>${protobuf.version}</version>
       </dependency>
       <!-- Logging -->
@@ -128,6 +132,11 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
+        <version>1.8.0-beta4</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-jdk14</artifactId>
         <version>1.8.0-beta4</version>
       </dependency>
       <!-- Apache Commons and Useful things -->
