--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -27,23 +27,20 @@
    </plugin>
    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-shade-plugin</artifactId>
-    <executions>
-     <execution>
-      <goals>
-       <goal>shade</goal>
-      </goals>
-      <configuration>
-       <shadedArtifactAttached>true</shadedArtifactAttached>
-       <transformers>
-        <transformer
-         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-         <mainClass>com.blockchaintp.sawtooth.daml.rpc.SawtoothDamlRpc</mainClass>
-        </transformer>
-       </transformers>
-      </configuration>
-     </execution>
-    </executions>
+    <artifactId>maven-jar-plugin</artifactId>
+    <configuration>
+     <archive>
+      <manifest>
+       <addClasspath>true</addClasspath>
+       <classpathPrefix>lib/</classpathPrefix>
+       <mainClass>com.blockchaintp.sawtooth.daml.rpc.SawtoothDamlRpc</mainClass>
+      </manifest>
+     </archive>
+    </configuration>
+   </plugin>
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-assembly-plugin</artifactId>
    </plugin>
   </plugins>
  </build>
@@ -52,6 +49,10 @@
   <dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
+  </dependency>
+  <dependency>
+   <groupId>org.slf4j</groupId>
+   <artifactId>slf4j-jdk14</artifactId>
   </dependency>
   <dependency>
    <groupId>io.reactivex.rxjava2</groupId>
