--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -21,27 +21,23 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-checkstyle-plugin</artifactId>
    </plugin>
-      <plugin>
+   <plugin>
     <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-shade-plugin</artifactId>
-    <executions>
-     <execution>
-      <goals>
-       <goal>shade</goal>
-      </goals>
-      <configuration>
-       <shadedArtifactAttached>true</shadedArtifactAttached>
-       <transformers>
-        <transformer
-         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-         <mainClass>com.blockchaintp.sawtooth.daml.processor.DamlTransactionProcessorMain</mainClass>
-        </transformer>
-       </transformers>
-      </configuration>
-     </execution>
-    </executions>
+    <artifactId>maven-jar-plugin</artifactId>
+    <configuration>
+     <archive>
+      <manifest>
+       <addClasspath>true</addClasspath>
+       <classpathPrefix>lib/</classpathPrefix>
+       <mainClass>com.blockchaintp.sawtooth.daml.processor.DamlTransactionProcessorMain</mainClass>
+      </manifest>
+     </archive>
+    </configuration>
    </plugin>
-   
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-assembly-plugin</artifactId>
+   </plugin>
   </plugins>
  </build>
 
