--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
  </properties>
  <dependencyManagement>
   <dependencies>
+   <!-- Java Spark -->
+   <dependency>
+    <groupId>com.sparkjava</groupId>
+    <artifactId>spark-core</artifactId>
+    <version>2.8.0</version>
+   </dependency>
    <!-- Unit testing -->
    <dependency>
     <groupId>junit</groupId>
