--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -1,85 +1,93 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
- <modelVersion>4.0.0</modelVersion>
- <parent>
-  <groupId>daml-on-sawtooth</groupId>
-  <artifactId>daml-on-sawtooth</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
- </parent>
- <artifactId>sawtooth-daml-tp</artifactId>
- <name>sawtooth-daml-tp</name>
- <description>Transaction Processor for DAML</description>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>daml-on-sawtooth</groupId>
+    <artifactId>daml-on-sawtooth</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+  <artifactId>sawtooth-daml-tp</artifactId>
+  <name>sawtooth-daml-tp</name>
+  <description>Transaction Processor for DAML</description>
 
- <build>
-  <plugins>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-   </plugin>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-checkstyle-plugin</artifactId>
-   </plugin>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-jar-plugin</artifactId>
-    <configuration>
-     <archive>
-      <manifest>
-       <addClasspath>true</addClasspath>
-       <classpathPrefix>lib/</classpathPrefix>
-       <mainClass>com.blockchaintp.sawtooth.daml.processor.DamlTransactionProcessorMain</mainClass>
-      </manifest>
-     </archive>
-    </configuration>
-   </plugin>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-assembly-plugin</artifactId>
-   </plugin>
-  </plugins>
- </build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.blockchaintp.sawtooth.daml.processor.DamlTransactionProcessorMain</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
- <dependencies>
-  <dependency>
-   <groupId>org.slf4j</groupId>
-   <artifactId>slf4j-api</artifactId>
-  </dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
 
-  <!-- Unit testing -->
-  <dependency>
-   <groupId>junit</groupId>
-   <artifactId>junit</artifactId>
-  </dependency>
-  <dependency>
-   <groupId>org.mockito</groupId>
-   <artifactId>mockito-core</artifactId>
-  </dependency>
+    <!-- Unit testing -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+    </dependency>
 
-  <!-- DAML -->
-
-
-  <!-- Hyperledger Sawtooth -->
-
-  <!-- Apache Commons -->
-  <dependency>
-   <groupId>commons-cli</groupId>
-   <artifactId>commons-cli</artifactId>
-  </dependency>
-  <dependency>
-   <groupId>org.javatuples</groupId>
-   <artifactId>javatuples</artifactId>
-   <scope>test</scope>
-  </dependency>
+    <!-- DAML -->
 
 
-  <!-- BTP -->
-  <dependency>
-   <groupId>daml-on-sawtooth</groupId>
-   <artifactId>sawtooth-daml-common</artifactId>
-   <version>${project.parent.version}</version>
-  </dependency>
- </dependencies>
+    <!-- Hyperledger Sawtooth -->
+
+    <!-- Apache Commons -->
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.javatuples</groupId>
+      <artifactId>javatuples</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+
+    <!-- BTP -->
+    <dependency>
+      <groupId>daml-on-sawtooth</groupId>
+      <artifactId>sawtooth-daml-common</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+  </dependencies>
 
 </project>
