Add tracer-ui composer
Excluding the envrc and Java Spark endpoint definitions.

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,11 @@
 **/.externalToolBuilders
 **/.metals
 
+# Exclude macOS system
+.DS_Store
+
 # Exclude vscode setting
 **/.vscode
+
+# Exclude direnv envrc
+.envrc
