--- a/docker/compose/daml-local.yaml
+++ b/docker/compose/daml-local.yaml
@@ -17,6 +17,30 @@ version: "2.1"
 
 services:
 
+  router:
+    image: binocarlos/noxy
+    ports:
+      - 80:80
+    depends_on:
+      - daml-rpc
+      - tracer-ui
+    environment:
+      - NOXY_DEFAULT_HOST=tracer-ui
+      - NOXY_DEFAULT_PORT=8080
+      - NOXY_DEFAULT_WS=1
+      - NOXY_API_FRONT=/transactions
+      - NOXY_API_HOST=daml-rpc
+      - NOXY_API_PORT=5051
+
+  tracer-ui:
+    image: tracer-ui:${ISOLATION_ID}
+    container_name: tracer-ui
+    ports:
+      - 8080:8080
+    entrypoint: bash -c 'yarn run develop'
+    environment:
+      - NODE_ENV=development
+
   settings-tp:
     image: hyperledger/sawtooth-settings-tp:1.1
     container_name: sawtooth-settings-tp-default
