Disable pmd ruleset
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/pom.xml
+++ b/pom.xml
@@ -268,8 +268,8 @@
           <version>3.12.0</version>
           <configuration>
             <rulesets>
-              <ruleset>/rulesets/java/maven-pmd-plugin-default.xml</ruleset>
-              <ruleset>/category/java/bestpractices.xml</ruleset>
+<!--               <ruleset>/rulesets/java/maven-pmd-plugin-default.xml</ruleset>
+              <ruleset>/category/java/bestpractices.xml</ruleset> -->
               <ruleset>/category/java/security.xml</ruleset>
             </rulesets>
             <linkXref>false</linkXref>
