Add a docker build for the ledger-api-testtool
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/docker/docker-compose-build.yaml
+++ b/docker/docker-compose-build.yaml
@@ -25,4 +25,11 @@ services:
     volumes:
       - ../:/project/daml-on-sawtooth
       - ${HOME}/.m2/settings.xml:/root/.m2/settings.xml
-      
+  ledger-api-testtool:
+    build:
+      context: .
+      dockerfile: ledger-api-testtool.docker
+    image: ledger-api-testtool:${ISOLATION_ID}
+    container_name: ledger-api-testtool
+    volumes:
+      - ../:/project/daml-on-sawtooth
