SXT-113 Update dependencies and add resolutions
Signed-off-by: Mikeala Sheldt <mikaela@blockchaintp.com>

--- a/tracer-ui/package.json
+++ b/tracer-ui/package.json
@@ -23,20 +23,20 @@
     "@babel/plugin-proposal-throw-expressions": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/plugin-transform-react-jsx-source": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/plugin-transform-react-jsx-source": "^7.5.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "7.3.4",
     "@babel/preset-react": "7.0.0",
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
-    "axios": "0.18.0",
-    "babel-loader": "8.0.5",
+    "axios": "0.18.1",
+    "babel-loader": "8.0.6",
     "babel-tape-runner": "^3.0.0",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^2.0.1",
-    "copy-webpack-plugin": "5.0.0",
+    "copy-webpack-plugin": "5.0.4",
     "dotty": "^0.1.0",
-    "ecstatic": "^3.3.1",
+    "ecstatic": "^3.3.2",
     "error-overlay-webpack-plugin": "^0.2.0",
     "html-webpack-plugin": "3.2.0",
     "normalizr": "^3.3.0",
@@ -45,9 +45,9 @@
     "react-dom": "16.8.4",
     "react-redux": "6.0.1",
     "react-router5": "^7.1.0",
-    "redux": "4.0.1",
+    "redux": "4.0.4",
     "redux-router5": "^7.0.2",
-    "redux-saga": "^1.0.2",
+    "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "router5": "^7.0.2",
@@ -57,11 +57,15 @@
     "tape": "^4.10.1",
     "terser-webpack-plugin": "^1.2.3",
     "timeago.js": "^4.0.0-beta.2",
-    "webpack": "4.29.6",
-    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack": "4.39.3",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.2.1",
-    "webpack-merge": "4.2.1",
+    "webpack-merge": "4.2.2",
     "webpack-visualizer-plugin": "^0.1.11"
+  },
+  "resolutions": {
+    "set-value": "2.0.1",
+    "lodash": "~4.17.13"
   }
 }
