Update to DAML SDK 0.13.37
This updates to DAML SDK 13.37.  Among other things
this version of the SDK has exacerbated some problems with
the threading model and its interaction with ZMQ.  Accordingly
parts of the multithreading have been restricted until this
is resolved

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 **/.cache-tests
 **/.externalToolBuilders
 **/.metals
+**/.scalafmt.conf
 
 # Exclude macOS system
 .DS_Store
@@ -41,3 +42,7 @@
 # exclude intellij items
 *.iml
 **/.idea
+
+# test-dars
+test-dars
+
