--- a/docker/compose/daml-local.yaml
+++ b/docker/compose/daml-local.yaml
@@ -41,6 +41,10 @@ services:
     environment:
       - NODE_ENV=development
 
+  postgres:
+    image: postgres
+    container_name: postgres
+
   settings-tp:
     image: hyperledger/sawtooth-settings-tp:1.1
     container_name: sawtooth-settings-tp-default
@@ -109,9 +113,15 @@ services:
     entrypoint: "bash -c \"\
       /opt/sawtooth-daml-rpc/entrypoint.sh --port 9000 \
         --connect tcp://validator:4004 \
+        --jdbc-url jdbc:postgresql://postgres/postgres?user=postgres \
+        --participant-id test-participant \
         `ls /opt/sawtooth-daml-rpc/dar/*.dar`\""
+    volumes:
+      - ../test-dars:/opt/sawtooth-daml-rpc/dar/
     depends_on:
       - validator
+      - postgres
+
 
   timekeeper:
     image: timekeeper:${ISOLATION_ID}
