--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <protobuf.version>3.8.0</protobuf.version>
     <sawtooth.sdk.version>v0.1.3</sawtooth.sdk.version>
-    <daml.sdk.version>100.13.29</daml.sdk.version>
+    <daml.sdk.version>100.13.37</daml.sdk.version>
     <daml.bindings.version>2.3.3</daml.bindings.version>
     <scala.lang.version>2.12</scala.lang.version>
   </properties>
@@ -142,6 +142,31 @@
         <artifactId>protobuf-java-util</artifactId>
         <version>${protobuf.version}</version>
       </dependency>
+      <dependency>
+        <groupId>com.daml.ledger</groupId>
+        <artifactId>participant-state_${scala.lang.version}</artifactId>
+        <version>${daml.sdk.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.digitalasset.ledger</groupId>
+        <artifactId>ledger-api-auth_${scala.lang.version}</artifactId>
+        <version>${daml.sdk.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.digitalasset.platform</groupId>
+        <artifactId>sandbox_${scala.lang.version}</artifactId>
+        <version>${daml.sdk.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.daml.ledger</groupId>
+        <artifactId>participant-state-kvutils_${scala.lang.version}</artifactId>
+        <version>${daml.sdk.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.daml.ledger</groupId>
+        <artifactId>participant-state-index_${scala.lang.version}</artifactId>
+        <version>${daml.sdk.version}</version>
+      </dependency>
       <!-- Logging -->
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -163,28 +188,6 @@
         <groupId>org.javatuples</groupId>
         <artifactId>javatuples</artifactId>
         <version>1.2</version>
-      </dependency>
-      <dependency>
-        <groupId>com.daml.ledger</groupId>
-        <artifactId>
-     participant-state-kvutils_${scala.lang.version}
-    </artifactId>
-        <version>${daml.sdk.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.daml.ledger</groupId>
-        <artifactId>participant-state-index_${scala.lang.version}</artifactId>
-        <version>${daml.sdk.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.daml.ledger</groupId>
-        <artifactId>reference-participant-state-index_${scala.lang.version}</artifactId>
-        <version>${daml.sdk.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.daml.ledger</groupId>
-        <artifactId>api-server-damlonx_${scala.lang.version}</artifactId>
-        <version>${daml.sdk.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
